# Fractal-Ubsp

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  MANUAL.txt  Makefile  README.md  b  build.sh  build.sh~  class.txt~  coding_func.cpp  def.h  diff.cpp  error  fcom  fdcom  globals.h  image_io.c  index_func.c  index_func.cpp  lena.ifs  lenna.pgm  mars_dec.c  mars_dec.cpp  mars_enc.c  mars_enc.cpp  mars_enc.cpp~  miscell.c  miscell.cpp  nn_search.c  nn_search.h  output.dec.ppm  pproc  pproc.cpp  pproc_dec  pproc_dec.cpp  prot.h  qm  split_func.c  (+1 more)
saliency/: CMakeLists.txt  GMRsaliency.cpp  GMRsaliency.cpp~  GMRsaliency.h  maps  runSaliency.cpp  saliency
scripts/: build.sh
src/: GMRsaliency.cpp  GMRsaliency.h  globals.h  mars_dec.cpp  pproc.cpp  progressive.cpp  split_func.cpp  triangle.h
