cmake_minimum_required(VERSION 2.8) 
project( Fractal )
find_package( OpenCV REQUIRED )
add_definitions(-std=c++11)
add_executable( fcom mars_enc.cpp image_io.cpp index_func.cpp coding_func.cpp miscell.cpp split_func.cpp nn_search.cpp)
add_executable( fdcom mars_dec.cpp image_io.cpp index_func.cpp coding_func.cpp miscell.cpp split_func.cpp nn_search.cpp)
target_link_libraries( fcom ${OpenCV_LIBS} )
target_link_libraries( fdcom ${OpenCV_LIBS} )
